# CrowPanel_TeacherApp

./: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  lvgl_port.c  lvgl_port.h  main.c  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/ble/: ble_client.cpp  ble_client.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/fonts/: ui_font_CO2Font.c  ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_font_FontBig.c  ui_font_Rus1.c
main/ui/images/: ui_img_1070636958.c
main/ui/screens/: ui_Screen1.c
